--- a/front-end/package.json
+++ b/front-end/package.json
@@ -16,12 +16,15 @@
     "@angular/common": "~11.0.0",
     "@angular/compiler": "~11.0.0",
     "@angular/core": "~11.0.0",
+    "@angular/flex-layout": "^10.0.0-beta.32",
     "@angular/forms": "~11.0.0",
     "@angular/material": "^11.0.3",
+    "@angular/material-moment-adapter": "^11.2.2",
     "@angular/platform-browser": "~11.0.0",
     "@angular/platform-browser-dynamic": "~11.0.0",
     "@angular/router": "~11.0.0",
     "bulma": "^0.9.1",
+    "moment": "^2.29.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
@@ -30,6 +33,7 @@
     "@angular-devkit/build-angular": "^0.1100.5",
     "@angular/cli": "~11.0.0",
     "@angular/compiler-cli": "~11.0.0",
+    "@angular/localize": "^11.0.4",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
