--- a/front-end/package.json
+++ b/front-end/package.json
@@ -23,9 +23,9 @@
     "@angular/platform-browser": "~11.0.0",
     "@angular/platform-browser-dynamic": "~11.0.0",
     "@angular/router": "~11.0.0",
-    
     "bulma": "^0.9.1",
-    
+    "html2canvas": "^1.0.0-rc.7",
+    "jspdf": "^2.3.1",
     "moment": "^2.29.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
