--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,19 +11,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.0.0",
-    "@angular/cdk": "^11.0.3",
+    "@angular/animations": "^11.0.9",
+    "@angular/cdk": "^11.2.13",
     "@angular/common": "~11.0.0",
     "@angular/compiler": "~11.0.0",
     "@angular/core": "~11.0.0",
     "@angular/flex-layout": "^10.0.0-beta.32",
     "@angular/forms": "~11.0.0",
-    "@angular/material": "^11.0.3",
+    "@angular/material": "^11.2.13",
     "@angular/material-moment-adapter": "^11.2.2",
     "@angular/platform-browser": "~11.0.0",
     "@angular/platform-browser-dynamic": "~11.0.0",
     "@angular/router": "~11.0.0",
+    "angular-font-awesome": "^3.1.2",
     "bulma": "^0.9.1",
+    "font-awesome": "^4.7.0",
     "html2canvas": "^1.0.0-rc.7",
     "jspdf": "^2.3.1",
     "moment": "^2.29.1",
