--- a/front-end/package.json
+++ b/front-end/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "~11.0.0",
     "angular-font-awesome": "^3.1.2",
     "bulma": "^0.9.1",
+    "file-saver": "^2.0.5",
     "font-awesome": "^4.7.0",
     "html2canvas": "^1.0.0-rc.7",
     "jspdf": "^2.3.1",
